# cc-quota

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  README.zh-CN.md  SECURITY.md  design-qa.md  index.html  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: CC-0.3-DESIGN-SYSTEM.md  GITHUB-RELEASE-CHECKLIST.md  KNOWN-LIMITATIONS.md  PROJECT-SUMMARY.md  RELEASE.md  RELEASE_TEMPLATE.md  TEST-MATRIX.md  provider-registry-contract.md  错题集.md
scripts/: check-version.mjs
src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude.rs  codex.rs  focus.rs  lib.rs  main.rs  models.rs  strings.rs
src-tauri/src/providers/: activity.rs  claude.rs  codex.rs  kimicode.rs  mod.rs
src/components/: DesignPlayground.tsx  QuotaCard.test.tsx  QuotaCard.tsx
src/lib/: bridge.test.ts  bridge.ts  format.test.ts  format.ts  i18n.ts  snapshots.test.ts  snapshots.ts
