[package]
name = "cc-quota"
version = "0.5.3"
description = "A macOS menu bar monitor for Codex and Claude quota"
authors = ["Robin0725 (Robin)", "Quota Float contributors"]
license = "MIT"
edition = "2021"

[lib]
name = "cc_quota_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
base64 = "0.22"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
fontdue = "0.9"
core-foundation = "0.10"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSRunningApplication", "NSWorkspace", "libc"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "system-proxy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tokio = { version = "1", features = ["macros", "process", "sync", "time"] }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
